# filesystem8

./: CMakeLists.txt  README.md  notes.txt
example/: directory_symlink_parent_resolution.cpp  error_demo.cpp  file_size.cpp  file_status.cpp  mbcopy.cpp  mbpath.cpp  mbpath.hpp  path_info.cpp  simple_ls.cpp  stems.cpp  tchar.cpp  tut0.cpp  tut1.cpp  tut2.cpp  tut3.cpp  tut4.cpp  tut5.cpp  tut6a.cpp  tut6b.cpp  tut6c.cpp
include/boost/: config.hpp
include/boost/detail/: bitmask.hpp
include/boost/filesystem/: config.hpp  operations.hpp  path.hpp
include/boost/system/: api_config.hpp
include/filesystem8/: config.hpp  convenience.hpp  filesystem.hpp  fstream.hpp  operations.hpp  path.hpp  path_traits.hpp  string_file.hpp
include/filesystem8/detail/: bitmask.hpp
src/: CMakeLists.txt  operations.cpp  path.cpp  path_traits.cpp  portability.cpp  unique_path.cpp
test/: CMakeLists.txt  convenience_test.cpp  deprecated_test.cpp  equivalent.cpp  fstream_test.cpp  large_file_support_test.cpp  long_path_test.cpp  macro_default_test.cpp  odr1_test.cpp  odr2_test.cpp  operations_test.cpp  operations_unit_test.cpp  path_test.cpp  path_times.cpp  path_unit_test.cpp  relative_test.cpp  sample_test.cpp  test_codecvt.hpp  windows_attributes.cpp
test/issues/: recurse_dir_iter_5403.cpp
